Develop - Editing index.html file

--- a/aframe/index.html
+++ b/aframe/index.html
@@ -23,7 +23,7 @@
 
       <a-assets>
         <img id="groundTexture" src=ground.jpeg>
-        <img id="skyTexture" src=snoop.jpeg>
+        <img id="skyTexture" src=vgtu.jpg>
       </a-assets>
 
       <a-plane src="#groundTexture" rotation="-90 0 0" height="100" width="100"></a-plane>
@@ -47,7 +47,7 @@
       <a-gui-radio
         width="2.5" height="1"
         onclick="testToggleAction"
-        value="Still D.R.E"
+        value="Elektronikos_Fakultetas"
         font-family="Arial"
         margin="0 0 0.05 0">
       </a-gui-radio>
@@ -64,7 +64,7 @@
       <a-gui-radio
 				width="2.5" height="0.75"
 				onclick="testToggleAction"
-				value="Gin & Juice"
+				value="Sauletekio fakultetas"
 				font-family="Arial"
 				margin="0 0 0.05 0">
 			</a-gui-radio>
